[package]
name = "dungeon-clawler-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Entity Component System
hecs = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
bincode = "1.3"

# Procedural Generation
rand = { version = "0.8", features = ["small_rng"] }
rand_pcg = "0.3"
noise = "0.9"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
smallvec = "1.11"

# Optional: Roguelike-specific tools
# bracket-lib = "0.8"  # Uncomment if you want pre-built roguelike algorithms

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1